
name:                lambdadrive
version:             0.1.0.0
synopsis:            lambdadrive firmware
-- description:
license:             BSD3
author:              Richard Marko
maintainer:          srk@48.io
copyright:           2017 Richard Marko
-- category:
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LDrive.Platforms
                       LDrive.ADC
                       LDrive.Encoder
                       LDrive.ExtInt
                       LDrive.Tests.CANSendRecv
                       LDrive.LED
                       LDrive.Control.Modulation
                       LDrive.Control.PID
                       LDrive.Control.SVM
                       LDrive.Control.Transform
                       LDrive.Types
                       LDrive.Calibration
                       LDrive.Calibration.Inductance
                       LDrive.Calibration.Encoder
                       LDrive.Calibration.Lock
                       LDrive.Calibration.Resistance
                       LDrive.DRV8301
                       LDrive.DRV8301.Regs
                       LDrive.DRV8301.RegTypes
                       LDrive.Serialize
                       --LDrive.Fixed
                       LDrive.Utils
                       LDrive.Tests.LED
                       LDrive.Tests.SPI
                       LDrive.Tests.Encoder
                       LDrive.Tests.PWM
                       LDrive.Tests.ADC
                       LDrive.Tests.ADCMulti
                       LDrive.Tests.Spin
                       LDrive.Tests.Calib
                       LDrive.Tests.FOCVoltage
                       LDrive.Tests.FOCCurrent
                       LDrive.Tests.CANOpen

  build-depends:       base >= 4.6,
                       monadLib,
                       ivory,
                       ivory-stdlib,
                       ivory-serialize,
                       ivory-hw,
                       ivory-tower-hxstream,
                       ivory-tower-canopen,
                       ivory-tower-canopen-core,
                       tower              >= 0.9,
                       tower-config,
                       tower-hal,
                       tower-freertos-stm32 >= 0.9,
                       canopen-schema-tower,
                       lambdadrive-schema-tower,
                       cidl,
                       ivory-tower-drivers,
                       ivory-bsp-stm32

  default-language:    Haskell2010
  ghc-options:         -Wall

executable cansendrecv-test-gen
  main-is:             CANSendRecv.hs
  hs-source-dirs:      test
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-hw,
                       tower          >= 0.9,
                       tower-config,
                       tower-freertos-stm32,
                       ivory-bsp-stm32,
                       ivory-bsp-tests,
                       lambdadrive
  ghc-options:          -Wall

executable blink-test-gen
  main-is:             LEDTest.hs
  hs-source-dirs:      test
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-hw,
                       tower          >= 0.9,
                       tower-config,
                       tower-freertos-stm32,
                       ivory-bsp-stm32,
                       ivory-bsp-tests,
                       lambdadrive
  ghc-options:          -Wall

executable spi-test-gen
  main-is:             SPITest.hs
  hs-source-dirs:      test
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-serialize,
                       ivory-backend-c,
                       ivory-hw,
                       tower          >= 0.9,
                       tower-config,
                       tower-hal,
                       tower-freertos-stm32,
                       ivory-bsp-stm32,
                       ivory-bsp-tests,
                       lambdadrive
  ghc-options:          -Wall

executable encoder-test-gen
  main-is:             EncoderTest.hs
  hs-source-dirs:      test
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-hw,
                       tower          >= 0.9,
                       tower-config,
                       tower-hal,
                       tower-freertos-stm32,
                       ivory-bsp-stm32,
                       ivory-bsp-tests,
                       lambdadrive
  ghc-options:          -Wall

executable pwm-test-gen
  main-is:             PWMTest.hs
  hs-source-dirs:      test
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-hw,
                       tower          >= 0.9,
                       tower-config,
                       tower-hal,
                       tower-freertos-stm32,
                       ivory-bsp-stm32,
                       ivory-bsp-tests,
                       lambdadrive
  ghc-options:          -Wall

executable adc-test-gen
  main-is:             ADCTest.hs
  hs-source-dirs:      test
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-hw,
                       tower          >= 0.9,
                       tower-config,
                       tower-hal,
                       tower-freertos-stm32,
                       ivory-bsp-stm32,
                       ivory-bsp-tests,
                       lambdadrive
  ghc-options:          -Wall

executable adcmulti-test-gen
  main-is:             ADCMultiTest.hs
  hs-source-dirs:      test
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-hw,
                       tower          >= 0.9,
                       tower-config,
                       tower-hal,
                       tower-freertos-stm32,
                       ivory-bsp-stm32,
                       ivory-bsp-tests,
                       lambdadrive
  ghc-options:          -Wall

executable spin-test-gen
  main-is:             SpinTest.hs
  hs-source-dirs:      test
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-hw,
                       tower          >= 0.9,
                       tower-config,
                       tower-hal,
                       tower-freertos-stm32,
                       ivory-bsp-stm32,
                       ivory-bsp-tests,
                       lambdadrive
  ghc-options:          -Wall

executable calib-test-gen
  main-is:             CalibTest.hs
  hs-source-dirs:      test
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-hw,
                       tower          >= 0.9,
                       tower-config,
                       tower-hal,
                       tower-freertos-stm32,
                       ivory-bsp-stm32,
                       ivory-bsp-tests,
                       lambdadrive
  ghc-options:          -Wall

executable focvoltage-test-gen
  main-is:             FOCVoltageTest.hs
  hs-source-dirs:      test
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-hw,
                       tower          >= 0.9,
                       tower-config,
                       tower-hal,
                       tower-freertos-stm32,
                       ivory-bsp-stm32,
                       ivory-bsp-tests,
                       lambdadrive
  ghc-options:          -Wall

executable foccurrent-test-gen
  main-is:             FOCCurrentTest.hs
  hs-source-dirs:      test
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-hw,
                       tower          >= 0.9,
                       tower-config,
                       tower-hal,
                       tower-freertos-stm32,
                       ivory-bsp-stm32,
                       ivory-bsp-tests,
                       lambdadrive
  ghc-options:          -Wall

executable canopen-test-gen
  main-is:             CANOpenTest.hs
  hs-source-dirs:      test
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-hw,
                       tower          >= 0.9,
                       tower-config,
                       tower-hal,
                       tower-freertos-stm32,
                       ivory-bsp-stm32,
                       ivory-bsp-tests,
                       lambdadrive
  ghc-options:          -Wall
