name:                cidl-odrive
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://48.io
license:             BSD3
--license-file:        LICENSE
author:              Richard Marko
maintainer:          srk@48.io
copyright:           2017 Richard Marko
category:            Web
build-type:          Simple
--extra-source-files:  README.rst
cabal-version:       >=1.10


executable cidl-odrive
  main-is:             Main.hs
  build-depends:       base
                     , async
                     , containers
                     , bytestring
                     , random
                     , cidl
  default-language:    Haskell2010
